--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-plotly": "0.0.4",
     "ember-cli-qunit": "^4.1.1",
     "ember-cli-sass": "^7.1.7",
     "ember-cli-shims": "^1.2.0",
+    "ember-cli-spinjs": "^1.4.2",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
     "ember-d3": "^0.4.4",
@@ -42,10 +42,8 @@
     "ember-lodash": "^4.18.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-models-table": "^2.5.0",
-    "ember-plotly-shim": "0.0.4",
     "ember-resolver": "^4.0.0",
     "ember-source": "~3.1.0",
-    "ember-welcome-page": "^3.0.0",
     "eslint-plugin-ember": "^5.0.0",
     "loader.js": "^4.2.3"
   },
